# artificial-duck

./: README.md  pyproject.toml  requirements.txt
artificial-duck/: ollama.py  repo.py
artificial_duck/: cli.py  ollama.py
